--- a/doc2dict/docs/mkdocs.yml
+++ b/doc2dict/docs/mkdocs.yml
@@ -1,9 +1,19 @@
 site_name: doc2dict
+
 theme:
   name: material
+  palette:
+    primary: indigo
+    accent: indigo
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.expand
+    - content.code.copy
+
 nav:
   - Home: index.md
-  - doc2dict: 
+  - doc2dict:
     - Overview: overview.md
 
 markdown_extensions:
@@ -12,3 +22,8 @@ markdown_extensions:
   - def_list
   - admonition
   - pymdownx.details
+  - toc:
+      permalink: true
+
+repo_url: https://github.com/john-friedman/doc2dict
+repo_name: john-friedman/doc2dict
